[gd_scene load_steps=12 format=3 uid="uid://d4gb2qrqauc7r"]

[ext_resource type="Script" path="res://scripts/Water Spouts.gd" id="1_myge6"]
[ext_resource type="Texture2D" uid="uid://dm8e8es226d2x" path="res://Assets/Objects/Water_Particle.png" id="2_oblpx"]
[ext_resource type="Texture2D" uid="uid://bljgwyt2e4bo7" path="res://Assets/Objects/WG_1.png" id="3_tluya"]
[ext_resource type="Texture2D" uid="uid://b3vc8ylyo8u6u" path="res://Assets/Objects/WG_2.png" id="4_s73oj"]
[ext_resource type="Texture2D" uid="uid://chn4q35i1nvq8" path="res://Assets/Objects/WG_3.png" id="5_g42lm"]
[ext_resource type="Script" path="res://scripts/AnimationPlayer.gd" id="6_yi2tk"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_asuag"]
frames = 3
speed_scale = 11.1
frame_0/texture = ExtResource("3_tluya")
frame_1/texture = ExtResource("4_s73oj")
frame_1/duration = 1.0
frame_2/texture = ExtResource("5_g42lm")
frame_2/duration = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oqutp"]
radius = 30.0
height = 676.171

[sub_resource type="Animation" id="Animation_swhwr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line2D:points")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-285, -79, -284, -468)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CapsuleShape2D_oqutp")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(61, -175)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area2D/CollisionShape2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_1n5jc"]
resource_name = "new_animation"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line2D:points")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.1, 2.8, 4.8),
"transitions": PackedFloat32Array(0.535887, 0.535887, 0.535887, 0.535887),
"update": 0,
"values": [PackedVector2Array(-285, -51, -285, -85), PackedVector2Array(-285, -79, -284, -468), PackedVector2Array(-285, -79, -284, -468), PackedVector2Array(-285, -51, -285, -85)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.1, 2.8, 4.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [SubResource("CapsuleShape2D_oqutp"), SubResource("CapsuleShape2D_oqutp"), SubResource("CapsuleShape2D_oqutp"), SubResource("CapsuleShape2D_oqutp")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 2.1, 2.8, 3, 3.4, 3.6, 3.8, 4.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(60, 54), Vector2(60, 5), Vector2(62, -44), Vector2(61, -175), Vector2(61, -175), Vector2(61, -140), Vector2(59, -85), Vector2(62, -58), Vector2(59, -32), Vector2(60, 54)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2.1, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area2D/CollisionShape2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.9, 1.5, 1.7, 1.8, 1.9, 2, 2.1, 2.8, 2.9, 3, 3.2, 3.4, 3.6, 3.8, 4.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.09761, 0.154525), Vector2(1.05768, 0.582796), Vector2(1.03106, 0.693567), Vector2(1.02218, 0.675747), Vector2(1.11682, 0.689933), Vector2(1.00779, 0.638327), Vector2(1.16164, 0.658333), Vector2(1.18799, 0.63911), Vector2(1.01278, 0.636195), Vector2(1.01278, 0.567326), Vector2(1.03538, 0.509447), Vector2(1.09052, 0.406849), Vector2(1.09052, 0.331322), Vector2(1.06878, 0.270379), Vector2(1.07648, 0.227639), Vector2(1.02856, 0.149136)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3fcee"]
_data = {
"RESET": SubResource("Animation_swhwr"),
"new_animation": SubResource("Animation_1n5jc")
}

[node name="Water Spouts" type="Node2D"]
script = ExtResource("1_myge6")
Sprout_timer = 1.1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(63, 74)
texture = ExtResource("2_oblpx")

[node name="Line2D" type="Line2D" parent="."]
z_index = -1
position = Vector2(340, 132)
points = PackedVector2Array(-285, -79, -284, -468)
width = 107.091
texture = SubResource("AnimatedTexture_asuag")
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3fcee")
}
script = ExtResource("6_yi2tk")

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(61, -175)
shape = SubResource("CapsuleShape2D_oqutp")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
